<resources>
    <string name="app_name">JetMovie</string>
    <string name="poster_film">Poster Film</string>
    <string name="popular">Popular</string>
    <string name="share">Share</string>
    <string name="watchlist">Watchlist</string>
    <string name="snackbar_msg_undo">Batalkan Penghapusan Item?</string>
    <string name="undo">Undo</string>
    <string name="home">Home</string>
    <string name="no_data_watchlist">Belum ada Watchlist</string>
    <string name="no_conection">Koneksi Kamu Bermasalah</string>
    <string name="upcoming">Upcoming</string>
    <string name="search">Search</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="profile">Profile</string>
    <string name="remind_me">Remind Me</string>
    <string name="reminder_watchlist">Reminder WatchList</string>

    <string name="text_settings">Settings</string>
    <string name="title_dialog_permission">Izin Diperlukan</string>
    <string name="message_permission_notification">Anda perlu mengaktifkan izin notifikasi di Pengaturan untuk menggunakan fitur ini.</string>
    <string name="text_open_setting">Buka Pengaturan</string>
    <string name="text_cancel">Batal</string>
    <string name="discover_suggestion">Discover Suggestion</string>
</resources>
