<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/jetmovie_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.raylabs.jetmovie.ui.home.PopularFragment"
        android:label="@string/home"
        tools:layout="@layout/content_home_popular" />

    <fragment
        android:id="@+id/navigation_watchlist"
        android:name="com.raylabs.jetmovie.ui.watchlist.WatchListFragment"
        android:label="@string/watchlist"
        tools:layout="@layout/content_watchlist" />

    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.raylabs.jetmovie.ui.upcoming.UpcomingFragment"
        android:label="@string/upcoming"
        tools:layout="@layout/content_home_upcoming" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.raylabs.jetmovie.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/content_profile" />
</navigation>